# plover_repeat

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
plover_repeat/: __init__.py  plover_repeat.py
plover_repeat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
