[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plover-repeat"
version = "0.1.0"
description = "Repeat previous strokes in Plover"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Ryan Tagen", email = "ryan.tagen@gmail.com"}
]
keywords = ["plover", "plover_plugin", "stenography"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "plover>=4.0.0.dev10",
]

[project.urls]
Homepage = "https://github.com/yourusername/plover-repeat"
Repository = "https://github.com/yourusername/plover-repeat"
Issues = "https://github.com/yourusername/plover-repeat/issues"

[project.entry-points."plover.extension"]
plover_repeat = "plover_repeat.plover_repeat:PloverRepeat"

[tool.setuptools]
license-files = []
zip-safe = true

[tool.setuptools.packages.find]
include = ["plover_repeat*"]