[metadata]
name = plover-repeat
version = 0.1.0
description = Repeat previous strokes in Plover
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = GPL-3.0-or-later
keywords = plover plover_plugin
url = https://github.com/yourusername/plover-repeat

[options]
zip_safe = True
install_requires =
    plover>=4.0.0.dev10
packages =
    plover_repeat

[options.entry_points]
plover.command =
    plover_repeat = plover_repeat
