[metadata]
name = plover-repeat
version = 0.1.0
description = Repeat previous strokes in Plover
long_description = file: README.md
author = Ryan Tagen
author_email = ryan.tagen@gmail.com
license = GNU General Public License v3 (GPLv3)
url = https://github.com/yourusername/plover-repeat
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
    plover>=4.0.0.dev10
packages =
    plover_repeat

[options.entry_points]
plover.extension =
    plover_repeat = plover_repeat:PloverRepeat
