[metadata]
name = plover-repeat
version = 0.1.0
description = Repeat previous strokes in Plover
long_description = file: README.md
long_description_content_type = text/markdown
author = Ryan Tagen
author_email = ryan.tagen@gmail.com
license = GPL-3.0-or-later
url = https://github.com/yourusername/plover-repeat
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords = plover plover_plugin stenography

[options]
zip_safe = True
install_requires =
    plover>=4.0.0.dev10
packages = find:
python_requires = >=3.8

[options.entry_points]
plover.extension =
    plover_repeat = plover_repeat:PloverRepeat